<?xml version="1.0"?>
<package format="3">
  <name>ti_mmwave_rospkg</name>
  <version>3.3.0</version>
  <description>The ti_mmwave_rospkg package. Publish messages with doppler information. Multi-sensor and camera overlay support. Modified by Leo Zhang</description>

  <maintainer email="shrigourisgs233@gmail.com">shrigouri</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/radar-lab/ti_mmwave_rospkg</url>
  <author email="shrigourisgs233@gmail.com">Leo Zhang</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>serial</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>message_filters</depend>
  <depend>pluginlib</depend>
  <depend>builtin_interfaces</depend>
  <depend>cv_bridge</depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>