<?xml version="1.0"?>
<package format="3">
  <name>ti_mmwave_rospkg</name>
  <version>0.0.0</version>
  <description>ROS 2 package for Texas Instruments mmWave radar sensors</description>
  <maintainer email="your.email@example.com">Your Name</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>serial</build_depend>
  <build_depend>rosidl_default_generators</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>serial</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>